# salary_count_bot

./: .dockerignore  .gitignore  Dockerfile  config.py  db.sqlite3  db.sqlite3.backup  docker-compose.yaml  loader.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2023_10_23_1513-ae037e1b53ec_create_all_tables.py  2023_10_23_1533-44c95148d89c_.py  2023_10_28_1018-42ce78438719_create_laser_conversion_field_on_visit_.py  2023_12_14_1550-15a8dfc04d17_rename_field_on_visit_from_client_name_.py
data/: objects.py  types.py
database/: utils.py
database/actions/: core.py  procedures.py  user.py  visit.py  workday.py
database/models/: __init__.py  procedure.py  subscription.py  user.py  visit.py  workday.py
exceptions/: handlers.py  keyboards.py  objects.py
filters/: custom_filter.py
handlers/: __init__.py
handlers/adding_visits/: __init__.py  add_visit.py  client_name.py  custom_visit_time.py  gross.py  manual_input.py  prime_cost.py  proc_duration.py  sub_gross.py
handlers/alarm/: __init__.py  alarm_status.py
handlers/conversion/: __init__.py  conversion_report.py
handlers/default/: cancel.py  help.py  start.py  start_help.py  undefined.py
handlers/edit_visit/: __init__.py
handlers/get_date_visits/: __init__.py  idle_hours.py  show_date.py
services/: scheduler.py
states/: user_states.py
templates/: conversion_report.j2  cosmetics.j2  laser.j2  period_short.j2  roller_massage.j2  visit.j2  workday.j2
utils/: calendar.py  create_file.py  dates.py  handler.py  jinja.py  procedures.py  set_filters.py  visit.py
(+59 files in other folders)
